--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
         </div>
     </nav> 
 
-<section class="box box-a bg-primarry text-center py-md">
+<section class="box box-a bg-primary text-center py-md">
     <div class="box-inner">
-        <h2 class="text-xl"></h2>
+        <h2 class="text-xl">Jingle all the way to free favorites</h2>
+        <p class="text-md">
+            Join Starbucks® Rewards for delicious deals & exclusive offers.
+            <a href="#">Learn more</a> 
+          </p> 
     </div>
 </section>
  
