--- a/index.html
+++ b/index.html
@@ -41,6 +41,55 @@
           </p> 
     </div>
 </section>
+
+<section class="box box-b bg-secondary grid-col-2">
+<img src="./img/box-b.png" alt="" srcset="">
+<div class="box-text">
+    <h2 class="text-xl">New to the nice list</h2>
+    <p class="text-md">For a nondairy twist on a holiday cookie classic, try the new Iced
+        Sugar Cookie Almondmilk Latte.</p>
+    <a href="#" class="btn btn-light-outline">order now</a>
+</div>
+</section>
+
+<section class="box box-c bg-secondary grid-col-2 grid-reversed">
+    <img src="img/box-c.png" alt="" />
+    <div class="box-text">
+      <h2 class="text-xl">Merry moment</h2>
+      <p class="text-md">
+        Treat yourself to a festive Sugar Plum Cheese Danish with a nicely
+        spiced sugar-plum spread.
+      </p>
+      <a href="#" class="btn btn-light-outline">Order Now</a>
+    </div>
+  </section>
+
+  
+  <section class="box box-d bg-primary grid-col-2">
+    <img src="img/box-d.png" alt="" />
+    <div class="box-text">
+      <h2 class="text-xl">Starbucks Thanksgiving Blend</h2>
+      <p class="text-md">
+        This elegant dark roast returns, showcasing flavors from some of the
+        world’s major coffee-growing regions.
+      </p>
+      <a href="#" class="btn btn-light-outline">Order Now</a>
+    </div>
+  </section>
+
+ 
+  <section class="box box-e bg-secondary grid-col-2 grid-reversed">
+    <img src="img/box-e.jpg" alt="" />
+    <div class="box-text">
+      <h2 class="text-md">Fighting hunger this holiday</h2>
+      <p class="text-sm">
+        Hunger is affecting millions of people across America this holiday
+        season. Join us in our commitment to hunger relief and help feed
+        neighbors in need.
+      </p>
+      <a href="#" class="btn btn-light-outline">Order Now</a>
+    </div>
+  </section>
  
 
     <script src="./script.js"></script>
