template footer with responsive media quries

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2 class="text-xl">Jingle all the way to free favorites</h2>
         <p class="text-md">
             Join Starbucks® Rewards for delicious deals & exclusive offers.
-            <a href="#">Learn more</a> 
+            <button class="btn btn-light-outline"><a href="#">Learn more</a> </button>
           </p> 
     </div>
 </section>
@@ -71,7 +71,7 @@
       <h2 class="text-xl">Starbucks Thanksgiving Blend</h2>
       <p class="text-md">
         This elegant dark roast returns, showcasing flavors from some of the
-        world’s major coffee-growing regions.
+        world's major coffee-growing regions.
       </p>
       <a href="#" class="btn btn-light-outline">Order Now</a>
     </div>
@@ -90,7 +90,64 @@
       <a href="#" class="btn btn-light-outline">Order Now</a>
     </div>
   </section>
- 
+
+  <section class="box box-f grid-col-2">
+    <div>
+      <img src="img/box-f1.jpg" alt="" />
+      <div class="bg-extra py-lg">
+        <div class="box-text">
+          <h2 class="text-md">Let the holiday cheer come to you</h2>
+          <p class="text-sm">
+            Make the moment merry. Order Starbucks® holiday favorites on Uber
+            Eats.*
+          </p>
+          <a href="#" class="btn btn-dark-outline">Order Now</a>
+        </div>
+      </div>
+    </div>
+    <div>
+      <img src="img/box-f2.jpg" alt="" />
+      <div class="bg-primary py-lg">
+        <div class="box-text">
+          <h2 class="text-md">Loved Passing on Netflix?</h2>
+          <p class="text-sm">
+            Our new social series about film adaptations kicks off with the
+            actors and directors who brought the book to life.
+          </p>
+          <a href="#" class="btn btn-light-outline">Order Now</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="divider"></div>
+
+<footer class="footer">
+  <div class="footer-container">
+    <div class="social">
+      <a href="https://spotify.com">
+        <img src="./img/social-spotify.svg" alt="" />
+      </a>
+      <a href="https://facebook.com">
+        <img src="./img/social-facebook.svg" alt="" />
+      </a>
+      <a href="https://pinterest.com">
+        <img src="./img/social-pinterest.svg" alt="" />
+      </a>
+      <a href="https://instagram.com">
+        <img src="./img/social-instagram.svg" alt="" />
+      </a>
+      <a href="https://youtube.com">
+        <img src="./img/social-youtube.svg" alt="" />
+      </a>
+      <a href="https://twitter.com">
+        <img src="./img/social-twitter.svg" alt="" />
+      </a>
+    </div>
+    <p>© 2022 Starbucks Coffee Company. All rights reserved.</p>
+  </div>
+</footer>
+
 
     <script src="./script.js"></script>
 </body>
