hamburger menu and mobile responsive

--- a/index.html
+++ b/index.html
@@ -29,8 +29,42 @@
             <li><button class="btn btn-dark-outline">Sign in</button></li>
             <li><button class="btn btn-dark">Join Now</button></li>
             </ul>
-        </div>
-    </nav> 
+
+ 
+ <button type="button" class="hamburger" id="menu-btn">
+  <span class="hamburger-top"></span>
+  <span class="hamburger-middle"></span>
+  <span class="hamburger-bottom"></span>
+</button>
+
+
+</div>
+</nav>
+
+<div class="mobile-menu hidden" id="menu">
+  <ul>
+    <li>
+      <a href="#">Menu</a>
+    </li>
+    <li>
+      <a href="#">Rewards</a>
+    </li>
+    <li>
+      <a href="#">Gift Cards</a>
+    </li>
+  </ul>
+
+  <div class="mobile-menu-bottom">
+    <button class="btn btn-dark-outline">Sign in</button>
+    <button class="btn btn-dark">Join now</button>
+    <div>
+      <a href="#">
+        <img src="img/marker.svg" alt="" />
+        <span>Find a store</span>
+      </a>
+    </div>
+  </div>
+</div>
 
 <section class="box box-a bg-primary text-center py-md">
     <div class="box-inner">
